--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,20 +11,80 @@
         android:id="@+id/gecko_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/toolbar"
         android:scrollbars="none"
-        />
+        app:layout_constraintBottom_toTopOf="@id/bottombar"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <android.support.v7.widget.Toolbar
+<!--    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
-        android:layout_alignParentBottom="true"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        /> -->
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/bottombar"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    <ImageButton
+        android:id="@+id/button_qslide"
+        android:layout_width="32dp"
+        android:layout_height="match_parent"
+
+        android:layout_marginStart="20dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_fullscreen_exit_black_24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/button_wvBack"
+        android:layout_width="46dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@id/button_qslide"
+        android:background="@android:color/transparent"
+        android:src="?attr/actionModeCloseDrawable"
+        app:layout_constraintStart_toEndOf="@id/button_qslide"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/etAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_toEndOf="@id/button_wvBack"
+        android:background="@android:color/transparent"
+        android:ems="10"
+        android:hint="@string/location_hint"
+        android:inputType="text"
+        app:layout_constraintStart_toEndOf="@id/button_wvBack"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <ImageButton
+        android:id="@+id/button_mainMenu"
+        android:layout_width="42dp"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="14dp"
+        android:background="@android:color/transparent"
+        android:src="@android:drawable/ic_menu_search"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
 
     <ProgressBar
         android:id="@+id/page_progress"
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:layout_alignTop="@id/gecko_view" />
-</RelativeLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/gecko_view" />
+</android.support.constraint.ConstraintLayout>
