Fix confirm dialog
reverse button error

--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -25,7 +25,7 @@
 
     <TextView
         android:id="@+id/titleAlert"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
         android:gravity="center"
@@ -33,6 +33,13 @@
         android:textColor="#000000"
         android:textSize="16sp" />
 
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="CheckBox"
+        android:visibility="gone" />
 
     <com.android.internal.widget.ButtonBarLayout
         android:layout_width="match_parent"
